# platform-engineering-epfl-workshop

./: .envrc.recommended  README.md
.devcontainer/: devcontainer.json
01-python-api/: cheatsheet.md  roleplay.md
02-python-scaling/: cheatsheet.md  cheetsheet.md  roleplay.md
03-terraform-intro/: cheatsheet.md  locals.tf  outputs.tf  provisioning.yaml  roleplay.md  variables.tf
04-terraform-application/: .gitignore  backend.tf  cheatsheet.md  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
05-platform-repo/: .gitignore  cheatsheet.md  roleplay.md
05-platform-repo/python/: pyproject.toml
05-platform-repo/python/src/: cli.py  mapper.py  models.py
05-platform-repo/terraform/: backend.tf  outputs.tf  providers.tf  variables.tf
nix/: flake.nix
