[project]
name = "platform-cli"
version = "0.1.0"
description = "CLI for provisioning GitHub resources via YAML -> JSON -> tfvars -> Terraform"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
platform-cli = "src.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
